--- a/estruturas_sequenciais.ipynb
+++ b/estruturas_sequenciais.ipynb
@@ -65,12 +65,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O montante que você pode economizar ao fim do ano é 36000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "salario_mensal = input('Digite seu salário mensal: ')\r\n",
+    "salario_mensal = float(salario_mensal)\r\n",
+    "\r\n",
+    "gasto_mensal = input('Digite o seu gasto mensal em média: ')\r\n",
+    "gasto_mensal = float(gasto_mensal)\r\n",
+    "\r\n",
+    "salario_anual = salario_mensal * 12\r\n",
+    "gasto_anual = gasto_mensal * 12\r\n",
+    "\r\n",
+    "montante_economizado = salario_anual - gasto_anual\r\n",
+    "\r\n",
+    "print('O montante que você pode economizar ao fim do ano é', montante_economizado)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
